--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,18 @@ a:hover,
   background-position: center;
 
 }
+.bgKanha{
+  background: url('./Media/wp15020210.webp');
+    background-size: cover;
+    background-position: center;
+}
+.secondbg{
+  
+      background: url('./Media/second.jpeg');
+      background-size: cover;
+      background-position: center;
+     } 
+
 @keyframes krishnaColors {
   0% {
     color: #ffd700;
